fix: add gap to prio-btns

--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -180,6 +180,12 @@ textarea {
     display: inline-block;
 }
 
+.priority-buttons__row {
+    display: flex;
+    justify-content: center;
+    gap: 12px;
+}
+
 
 
 @media (min-width: 320px) and (max-width: 855px) {
